cabal-version:      3.0
name:               devenv-haskell-error
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             april
maintainer:         april@cyberglot.me
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable devenv-haskell-error
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0,
                      aeson,
                      http-conduit
    hs-source-dirs:   app
    default-language: GHC2021
